--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "antd": "^3.26.4",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "fg-loadcss": "^2.1.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-material-ui-form-validator": "^2.0.9",
+    "react-motion-menu": "^0.4.4",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
