--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.0.1",
     "@material-ui/icons": "^4.0.1",
+    "@material-ui/lab": "^4.0.0-alpha.38",
     "@material-ui/styles": "^4.0.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -12,11 +13,15 @@
     "antd": "^3.26.4",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "classnames": "^2.2.6",
+    "clsx": "^1.0.4",
     "fg-loadcss": "^2.1.0",
+    "google-map-react": "^1.1.5",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-card-flip": "^1.0.10",
     "react-dom": "^16.12.0",
     "react-material-ui-form-validator": "^2.0.9",
     "react-motion-menu": "^0.4.4",
