--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^16.12.0",
     "react-card-flip": "^1.0.10",
     "react-dom": "^16.12.0",
+    "react-motion": "^0.4.8",
     "react-material-ui-form-validator": "^2.0.9",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
