--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "serve": "^11.3.0"
+    "serve": "^11.3.0",
+    "merge-config": "2.0.0"
   },
   "scripts": {
     "dev": "react-scripts start",
