--- a/package.json
+++ b/package.json
@@ -18,20 +18,20 @@
     "fg-loadcss": "^2.1.0",
     "google-map-react": "^1.1.5",
     "jwt-decode": "^2.2.0",
+    "merge-config": "2.0.0",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-card-flip": "^1.0.10",
     "react-dom": "^16.12.0",
-    "react-motion": "^0.4.8",
     "react-material-ui-form-validator": "^2.0.9",
+    "react-motion": "^0.4.8",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "serve": "^11.3.0",
-    "merge-config": "2.0.0"
+    "serve": "^11.3.0"
   },
   "scripts": {
     "dev": "react-scripts start",
