--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
     "clsx": "^1.0.4",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "fg-loadcss": "^2.1.0",
     "google-map-react": "^1.1.5",
     "jwt-decode": "^2.2.0",
@@ -35,6 +37,7 @@
   },
   "scripts": {
     "dev": "react-scripts start",
+    "start2": "node server.js",
     "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
